[ADD] component collaps css logement page & collapse logement page + fix carroussel

--- a/src/pages/Logements/index.scss
+++ b/src/pages/Logements/index.scss
@@ -7,59 +7,79 @@
     color: $color-secondary;
     width: 95%;
     margin: 0 auto;
-  }
-  &_infos {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    font-weight: 500;
-    font-size: 14px;
-    button {
-      display: inline;
-      padding: 5px 15px;
-      margin-right: 10px;
-      cursor: pointer;
-      border-radius: 10px;
-      border: none;
-      color: $color-primary;
-      background-color: $color-secondary;
-      &:hover {
-        box-shadow: 0 2px 8px rgb(0, 0, 0);
+    &_infos {
+      display: flex;
+      flex-direction: column;
+      font-weight: 500;
+      font-size: 14px;
+      h1 {
+        font-size: 50px;
+      }
+      button {
+        display: inline;
+        padding: 5px 15px;
+        margin-right: 10px;
+        cursor: pointer;
+        border-radius: 10px;
+        border: none;
+        color: $color-primary;
+        background-color: $color-secondary;
+        &:hover {
+          box-shadow: 0 2px 8px rgb(0, 0, 0);
+        }
+      }
+      div {
+        display: flex;
+        flex-wrap: wrap;
+        padding-top: 15px;
       }
     }
-    div {
+    &_host {
       display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
+      flex-direction: column;
+      div {
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
+        gap: 0 10px;
+        padding-top: 15px;
+      }
+      &_name {
+        align-self: center;
+        flex-direction: column;
+      }
+      img {
+        width: 64px;
+        height: 64px;
+        object-fit: cover;
+        object-position: center;
+        border-radius: 50%;
+      }
+      &_stars {
+        display: flex;
+        gap: 10px;
+        img {
+          width: 30px;
+          height: 30px;
+        }
+      }
     }
   }
-  &_host {
+  &_collapse {
     display: flex;
-    flex-direction: column;
-    gap: 5px;
-    div {
+    justify-content: center;
+    padding-top: 30px;
+    &_container {
       display: flex;
-      justify-content: flex-end;
-      align-items: flex-end;
-      gap: 0 10px;
+      width: 95%;
     }
-    &_name {
-      align-self: center;
-      flex-direction: column;
-    }
-    img {
-      width: 64px;
-      height: 64px;
-      object-fit: cover;
-      object-position: center;
-      border-radius: 50%;
-    }
-    &_stars {
-      display: flex;
-      gap: 10px;
-      img {
-        width: 30px;
-        height: 30px;
+    &_item {
+      &1 {
+        width: 50%;
+      }
+      &2 {
+        width: 50%;
+        padding-left: 100px;
       }
     }
   }
